[project]
name = "meta-ads-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.2.1",
    "mcp>=1.27.1",
    "python-dotenv>=1.2.2",
]
